[gd_scene load_steps=3 format=3 uid="uid://cmhpq8tw4qs8p"]

[ext_resource type="Theme" uid="uid://1h40sciui403" path="res://themes/main_menu_theme.tres" id="1_6pcph"]
[ext_resource type="Script" path="res://post_load.gd" id="1_8k2nj"]

[node name="PostLoad" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6pcph")
script = ExtResource("1_8k2nj")
metadata/_edit_lock_ = true

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="OuterMargin" type="MarginContainer" parent="CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 275
theme_override_constants/margin_right = 400
theme_override_constants/margin_bottom = 275
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/OuterMargin"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/OuterMargin/PanelContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="ButtonVBox" type="VBoxContainer" parent="CenterContainer/OuterMargin/PanelContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ContinueButton" type="Button" parent="CenterContainer/OuterMargin/PanelContainer/CenterContainer/ButtonVBox"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../ChapterSelectButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../ChapterSelectButton")
focus_next = NodePath("../ChapterSelectButton")
focus_previous = NodePath("../ChapterSelectButton")
text = "Continue"

[node name="ContinueRichText" type="RichTextLabel" parent="CenterContainer/OuterMargin/PanelContainer/CenterContainer/ButtonVBox/ContinueButton"]
visible = false
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Continue[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
metadata/_edit_lock_ = true

[node name="ChapterSelectButton" type="Button" parent="CenterContainer/OuterMargin/PanelContainer/CenterContainer/ButtonVBox"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../ContinueButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../ContinueButton")
focus_next = NodePath("../ContinueButton")
focus_previous = NodePath("../ContinueButton")
text = "Chapter Select"

[connection signal="pressed" from="CenterContainer/OuterMargin/PanelContainer/CenterContainer/ButtonVBox/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CenterContainer/OuterMargin/PanelContainer/CenterContainer/ButtonVBox/ChapterSelectButton" to="." method="_on_chapter_select_button_pressed"]
